# MAI-OOP-LR7

./: CMakeLists.txt  README.md  input.txt  main.cpp
include/: core.h  druid.h  factory_npc.h  npc.h  observer.h  orc.h  slaver.h  visitor_fight.h
src/: core.cpp  druid.cpp  factory_npc.cpp  npc.cpp  observer.cpp  orc.cpp  slaver.cpp  visitor_fight.cpp
test/: tests.cpp
